<resources>
    <string name="app_name">RENU</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment by Dhosio</string>

    <string name="createdBy">Dhosio</string>

    <string name="categoryError">Sorry! Could not communicate with server. Please check internet connection</string>

    <string name="username">Username</string>

    <string name="email">Email</string>

    <string name="password">Password</string>

    <string name="confirmPassword">Confirm Password</string>

    <string name="signUp">Sign Up</string>

    <string name="tableNumber">Table number</string>

    <string name="dessertDescription">For those still with space after the meal</string>

</resources>