<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SubCategoryActivityFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >

        <androidx.core.widget.NestedScrollView
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:fillViewport="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <RelativeLayout
                android:id="@+id/DessertsView"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="300dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:id="@+id/pageTitleAppName"
                    android:textColor="@color/white"
                    android:drawableLeft="@drawable/ic_action_arrorback"
                    android:text="Desserts"
                    android:drawablePadding="10dp"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvCategoriesHeader"
                    android:padding="20dp"
                    android:elevation="50dp"
                    app:cardCornerRadius="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    android:layout_below="@id/pageTitleAppName" >

                    <TextView
                        android:id="@+id/categoriesHeader"
                        android:text="@string/dessertDescription"
                        android:textSize="19sp"
                        android:textColor="@color/white"
                        android:layout_margin="5dp"
                        android:padding="10dp"
                        android:textStyle="bold"
                        android:layout_below="@id/pageTitleAppName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvErrorMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categoryError"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:textSize="15sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textAlignment="center"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycleDesserts"
                    android:scrollbars="none"
                    android:clipToPadding="false"
                    android:layout_marginTop="25dp"
                    android:paddingVertical="3dp"
                    android:layout_below="@id/cvCategoriesHeader"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="50dp"
                    />

                <!--            <include android:id="@+id/shimmerCategory"-->
                <!--                layout="@layout/item_recycler_category_shimmer" />-->

                <TextView
                    android:padding="10dp"
                    android:gravity="center"
                    android:textColor="@color/colorWhite"
                    android:text="@string/createdBy"
                    android:background="@color/colorPrimaryLight"
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"/>

            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

</FrameLayout>